Changed the class 'Anomaly' to 'Monitor' in examples

--- a/examples/finetuning_LLM/run.ipynb
+++ b/examples/finetuning_LLM/run.ipynb
@@ -381,7 +381,7 @@
     "cfg = {\n",
     "    'checks': [\n",
     "        {\n",
-    "            \"type\": uptrain.Anomaly.EDGE_CASE,\n",
+    "            \"type\": uptrain.Monitor.EDGE_CASE,\n",
     "            \"signal_formulae\": \\\n",
     "                uptrain.Signal(\"Is 'Nike' text present?\", nike_text_present_func) &\n",
     "                uptrain.Signal(\"Is it a Nike product?\", nike_product_keyword_func) &\n",
@@ -389,7 +389,7 @@
     "        },\n",
     "\n",
     "        {\n",
-    "            \"type\": uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "            \"type\": uptrain.Monitor.DATA_INTEGRITY,\n",
     "            \"measurable_args\": {\n",
     "                \"type\": uptrain.MeasurableType.INPUT_FEATURE,\n",
     "                \"feature_name\": \"text\"\n",
