--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -520,7 +520,7 @@
    ],
    "source": [
     "checks = [{\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "        'type': uptrain.Monitor.DATA_DRIFT,\n",
     "        'reference_dataset': orig_training_file,\n",
     "        'is_embedding': True,\n",
     "        \"measurable_args\": {\n",
