--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "cfg = {\n",
     "    \"checks\": [{\n",
-    "        \"type\": uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "        \"type\": uptrain.Monitor.DATA_INTEGRITY,\n",
     "        \"measurable_args\": {\n",
     "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "            'feature_name': 'passenger_count'\n",
