--- a/examples/shopping_cart_recommendation/run.ipynb
+++ b/examples/shopping_cart_recommendation/run.ipynb
@@ -301,7 +301,7 @@
     "        # Check to monitor the hit-rate of the model \n",
     "        # (i.e., if any recommended item was selected)\n",
     "        {\n",
-    "            'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "            'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
     "            'algorithm': uptrain.DataDriftAlgo.DDM,\n",
     "            'warn_thres': 2,\n",
     "            'alarm_thres': 3,\n",
@@ -311,13 +311,13 @@
     "        },\n",
     "        # Define a check on popularity bias\n",
     "        {\n",
-    "            'type': uptrain.Anomaly.POPULARITY_BIAS,\n",
+    "            'type': uptrain.Monitor.POPULARITY_BIAS,\n",
     "            'algorithm': uptrain.BiasAlgo.POPULARITY_BIAS,\n",
     "            'sessions': x_train_sku,   \n",
     "        },\n",
     "        # Custom monitor\n",
     "        {\n",
-    "            'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
+    "            'type': uptrain.Monitor.CUSTOM_MONITOR,\n",
     "            'initialize_func': cosine_dist_init,\n",
     "            'check_func': cosine_distance_check,\n",
     "            'need_gt': True,\n",
@@ -325,7 +325,7 @@
     "        },\n",
     "        # Custom monitor\n",
     "        {\n",
-    "            'type': uptrain.Anomaly.CUSTOM_MONITOR,\n",
+    "            'type': uptrain.Monitor.CUSTOM_MONITOR,\n",
     "            'initialize_func': price_homogeneity_init,\n",
     "            'check_func': price_homogeneity_check,\n",
     "            'need_gt': True,\n",
