--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -684,7 +684,7 @@
    "source": [
     "config = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "        'type': uptrain.Monitor.DATA_DRIFT,\n",
     "        \"measurable_args\": {\n",
     "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "            'feature_name': 'bert_embs_downsampled'\n",
@@ -875,7 +875,7 @@
     "\n",
     "config = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.EDGE_CASE,\n",
+    "        'type': uptrain.Monitor.EDGE_CASE,\n",
     "        'signal_formulae': uptrain.Signal(\"Incorrect Grammer\", grammar_check_func) \n",
     "            | (uptrain.Signal(\"Sentiment Score\", negative_sentiment_score_func) > 0.5)\n",
     "    }],\n",
