Changing name in test and deepdive examples

--- a/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "cfg = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "        'type': uptrain.Monitor.DATA_INTEGRITY,\n",
     "        'measurable_args': {\n",
     "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
     "            'feature_name': 'kps'\n",
@@ -234,7 +234,7 @@
     "        'integrity_type': 'non_null'\n",
     "    },\n",
     "    {\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "        'type': uptrain.Monitor.DATA_INTEGRITY,\n",
     "        'measurable_args': {\n",
     "            'type': uptrain.MeasurableType.CUSTOM,\n",
     "            'signal_formulae': uptrain.Signal(\"body_length\", body_length_signal),\n",
