--- a/examples/human_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "check1 = {\n",
-    "    'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "    'type': uptrain.Monitor.DATA_DRIFT,\n",
     "    'reference_dataset': orig_training_file,\n",
     "    'is_embedding': True,\n",
     "    \"measurable_args\": {\n",
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "check2 = {\n",
-    "    'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "    'type': uptrain.Monitor.DATA_INTEGRITY,\n",
     "    \"integrity_type\": \"greater_than\",\n",
     "    \"threshold\": 100,\n",
     "    \"measurable_args\": {\n",
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "check3 = {\n",
-    "    'type': uptrain.Anomaly.EDGE_CASE, \n",
+    "    'type': uptrain.Monitor.EDGE_CASE, \n",
     "    \"signal_formulae\": uptrain.Signal(\"Pushup\", pushup_signal)\n",
     "\n",
     "}"
@@ -332,7 +332,7 @@
    "outputs": [],
    "source": [
     "check4 = {\n",
-    "    'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "    'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
     "    'algorithm': uptrain.DataDriftAlgo.DDM\n",
     "}"
    ]
@@ -585,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
