--- a/examples/human_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "cfg = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "        'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
     "        'algorithm': uptrain.DataDriftAlgo.DDM\n",
     "    }],\n",
     "    \"data_identifier\": \"id\",\n",
