--- a/examples/human_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "check1 = {\n",
-    "    'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "    'type': uptrain.Monitor.DATA_DRIFT,\n",
     "    'reference_dataset': orig_training_file,\n",
     "    'is_embedding': True,\n",
     "    \"measurable_args\": {\n",
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "check2 = {\n",
-    "    'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "    'type': uptrain.Monitor.DATA_DRIFT,\n",
     "    'reference_dataset': orig_training_file,\n",
     "    \"save_edge_cases\": False,\n",
     "    \"measurable_args\": {\n",
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "check3 = {\n",
-    "    'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "    'type': uptrain.Monitor.DATA_DRIFT,\n",
     "    'reference_dataset': orig_training_file,\n",
     "    'is_embedding': False,\n",
     "    \"save_edge_cases\": False,\n",
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
