--- a/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
@@ -247,7 +247,7 @@
     "cfg = {\n",
     "    # Define your signal to identify edge cases\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.EDGE_CASE, \n",
+    "        'type': uptrain.Monitor.EDGE_CASE, \n",
     "        \"signal_formulae\": pushup_edge_case\n",
     "    }],\n",
     "\n",
