--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -520,7 +520,7 @@
    ],
    "source": [
     "checks = [{\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
+    "        'type': uptrain.Monitor.DATA_DRIFT,\n",
     "        'reference_dataset': orig_training_file,\n",
     "        'is_embedding': True,\n",
     "        \"measurable_args\": {\n",
@@ -778,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
