Improve documentation of shopping cart example

--- a/examples/shopping_cart_recommendation/run.ipynb
+++ b/examples/shopping_cart_recommendation/run.ipynb
@@ -43,19 +43,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5d7da2b0-6a3f-4fe9-aed8-461eae7fd3e5",
-   "metadata": {},
+   "id": "1996c2d2-5eec-43ba-8696-a6026d3d1625",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import os\n",
+    "#!pip install gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5d7da2b0-6a3f-4fe9-aed8-461eae7fd3e5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "from scipy.spatial.distance import cosine\n",
     "import numpy as np\n",
-    "import subprocess\n",
-    "import json\n",
     "import time\n",
     "\n",
     "import uptrain\n",
-    "from gensim.models import Word2Vec"
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "from helper_funcs import load_sigir_data, model_predict"
    ]
   },
   {
@@ -63,14 +76,16 @@
    "id": "1b09994e-df68-4a5a-a60a-b11efcd6f572",
    "metadata": {},
    "source": [
-    "First, we download the preprocessed SIGIR shopping cart dataset (if not already exists). "
+    "Let's first download the preprocessed SIGIR shopping cart dataset and visualize some of the data-points "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05443301-3e1b-4e30-a9a4-c6f47d68821d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,41 +93,31 @@
      "text": [
       "Data file exists. Skipping download.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'session_id': '8d2cdf570f6ea2b337e33c8649fb5d209e127e45c07cff47ef6ddfe55d3a33ef',\n",
+       "  'event_type': 'event_product',\n",
+       "  'product_action': 'purchase',\n",
+       "  'product_sku': 'd1cd6d3f2ec98bcd365842049f72be5fc839ae8deb18abec6113c5c63202da02',\n",
+       "  'server_timestamp_epoch_ms': '1554203649238',\n",
+       "  'hashed_url': 'e396b36a40f2c41d259a45b80e10cd113eb0bf7540b73f49559e89806f734280'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_file = \"sigir_data.json\"\n",
-    "remote_url = \"https://oodles-dev-training-data.s3.amazonaws.com/sigir_data.json\"\n",
-    "if not os.path.exists(data_file):\n",
-    "    try:\n",
-    "        # Most Linux distributions have Wget installed by default.\n",
-    "        # Below command is to install wget for MacOS\n",
-    "        wget_installed_ok = subprocess.call(\"brew install wget\", shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
-    "        print(\"Successfully installed wget\")\n",
-    "    except:\n",
-    "        dummy = 1\n",
-    "    try:\n",
-    "        if not os.path.exists(\"sigir_data.json\"):\n",
-    "            file_downloaded_ok = subprocess.call(\"wget \" + remote_url, shell=True, stdout=subprocess.DEVNULL, stderr=subprocess.STDOUT)\n",
-    "            print(\"Data downloaded\")\n",
-    "    except:\n",
-    "        print(\"Could not load training data\")\n",
-    "        print(\"Please follow following steps to manually download data\")\n",
-    "        print(\"Step 1: Open in browser: https://oodles-dev-training-data.s3.amazonaws.com/sigir_data.json\")\n",
-    "        print(\"Step 2: Download and move the file to example location (i.e. uptrain/examples/3_shopping_cart_recommendation/\")\n",
-    "else:\n",
-    "    print(\"Data file exists. Skipping download.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "98843f5b-7c33-4f58-8318-1e1786d6ca53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('sigir_data.json') as f:\n",
-    "    data = json.load(f)"
+    "data = load_sigir_data(\"sigir_data.json\")\n",
+    "\n",
+    "x_test = data['x_test']\n",
+    "y_test = data['y_test']\n",
+    "inference_batch_size = 10\n",
+    "\n",
+    "x_test[42]"
    ]
   },
   {
@@ -135,7 +140,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d6488a52-d6fd-4e58-8374-074c088eb460",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "x_train_sku = [[e['product_sku'] for e in s] for s in data['x_train']]\n",
@@ -144,10 +151,127 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d26ab1c-28d0-4a3e-bf86-0a74f635a6c4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Step 2: Monitor model's performance using UpTrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e76d20b0-55d7-499e-82f8-c69455f4cdfd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'checks': [{'type': <Monitor.CONCEPT_DRIFT: 'concept_drift'>,\n",
+       "   'algorithm': <DataDriftAlgo.DDM: 'DDM'>,\n",
+       "   'measurable_args': {'type': <MeasurableType.REC_HIT_RATE: 'hit_rate'>}}],\n",
+       " 'retraining_folder': 'uptrain_smart_data',\n",
+       " 'logging_args': {'st_logging': True}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg = {\n",
+    "    \"checks\": [{\n",
+    "        'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
+    "        'algorithm': uptrain.DataDriftAlgo.DDM,\n",
+    "        \"measurable_args\": {\n",
+    "            'type': uptrain.MeasurableType.REC_HIT_RATE,\n",
+    "        },\n",
+    "    }], \n",
+    "    \"retraining_folder\": 'uptrain_smart_data', \n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
+    "}\n",
+    "\n",
+    "cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cba0111a-21c2-4017-b49f-f0d586267107",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n",
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://192.168.6.92:8502\n",
+      "\n",
+      "  For better performance, install the Watchdog module:\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "framework = uptrain.Framework(cfg)\n",
+    "\n",
+    "for i in range(int(len(x_test)/inference_batch_size)):\n",
+    "    # Define input in the format understood by the UpTrain framework\n",
+    "    inputs = {\"feats\": x_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
+    "    \n",
+    "    # Do model prediction\n",
+    "    preds = model_predict(model, inputs['feats'])\n",
+    "\n",
+    "    # Log input and output to framework\n",
+    "    ids = framework.log(inputs=inputs, outputs=preds)\n",
+    "    \n",
+    "    # Getting ground truth and logging to framework\n",
+    "    y_test_batch = y_test[i*inference_batch_size:(i+1)*inference_batch_size]\n",
+    "    gts = [y[0]['product_sku'] for y in y_test_batch]\n",
+    "    framework.log(identifiers=ids, gts=gts)\n",
+    "    \n",
+    "    # Adding 0.01 sec pause to visualize the results live on the dashboard\n",
+    "    time.sleep(0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b56efcc6-f8cc-449a-a004-cd65cba8c00a",
+   "metadata": {},
+   "source": [
+    "As we see from the dashboard, our hit rate is ~10% which isn't much helpful to understand how the model works. Low hit rates are quite common in recommendation systems as the user might be purchasing similar items, but not necessarily the exact item which our model recommended.\n",
+    "\n",
+    "<img width=\"600\" alt=\"hit_rate\" src=\"https://user-images.githubusercontent.com/5287871/217215003-e121b499-0e69-4e98-9cd6-2b931cc62056.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7629b8c0-6c43-4031-b195-6a452c65a61d",
+   "metadata": {},
+   "source": [
+    "Let's define few custom monitor to get better insights into the performance of our model as well as quantify model biases such as popularity bias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bebfe8a4-5d2a-47d0-982d-a08d0826fa8c",
    "metadata": {},
    "source": [
-    "### Step 2: Define a custom monitor (cosine distance between embeddings of predicted and selected items)"
+    "### Step 3: Define custom monitor (cosine distance between embeddings of predicted and selected items)"
    ]
   },
   {
@@ -155,12 +279,12 @@
    "id": "37843962-fc6b-4cd0-b6c7-64f58c2dd28d",
    "metadata": {},
    "source": [
-    "Next, we define a custom metric where we want to monitor the cosine distance between embedding vectors of predicted and selected items. Specifically, we want to measure the cosine distance between the ground truth and first predicted item."
+    "Next, we define a custom metric where we want to monitor the cosine distance between embedding vectors of predicted and selected items. Specifically, we want to measure the cosine distance between the ground truth and first predicted item. Low cosine distance means our model is doing a good job in recommending relevant items (even if the hit rate is low)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "aa9b0a94-6167-4276-aa17-e50b3a6b17bc",
    "metadata": {},
    "outputs": [],
@@ -191,7 +315,7 @@
    "id": "68667685-418f-4e10-be9c-f87d5092370d",
    "metadata": {},
    "source": [
-    "### Step 3: Define another custom monitor (price difference between predicted and selected items)"
+    "### Step 4: Define another custom monitor (price difference between predicted and selected items)"
    ]
   },
   {
@@ -199,12 +323,12 @@
    "id": "aeee5382-da5e-4e7e-9522-4f6d8ecd40f9",
    "metadata": {},
    "source": [
-    "Next, we also add a custom metric to measure the absolute log ratio between the ground truth and prediction item prices"
+    "Next, we also add a custom metric to measure the absolute log ratio between the ground truth and prediction item prices. Values far away from 0 means the recommended items are very different from the ones which the user ended buying. Imagine selling a washing machine to someone who came to purchase washing powder - pretty hard right!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "54e7329a-6823-4875-ba3a-8453ae23c412",
    "metadata": {},
    "outputs": [],
@@ -232,48 +356,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9c84fe-40eb-4957-889b-7b655fd92a52",
-   "metadata": {},
-   "source": [
-    "### Step 4: Define the prediction pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4236132b-8639-4401-b100-2d42d6ab6a28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_test = data['x_test']\n",
-    "y_test = data['y_test']\n",
-    "inference_batch_size = 10\n",
-    "\n",
-    "def model_predict(model, x_test_batch):\n",
-    "    \"\"\"\n",
-    "    Implement the model prediction function. \n",
-    "    \n",
-    "    :model: Word2Vec model learned from user shopping sessions\n",
-    "    :x_test_batch: list of lists, each list being the content of a cart\n",
-    "    \n",
-    "    :return: the predictions returned by the model are the top-K\n",
-    "    items suggested to complete the cart.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    predictions = []\n",
-    "    for _x in x_test_batch:\n",
-    "        key_item = _x[0]['product_sku']\n",
-    "        nn_products = model.most_similar(key_item, topn=10) if key_item in model else None\n",
-    "        if nn_products:\n",
-    "            predictions.append([_[0] for _ in nn_products])\n",
-    "        else:\n",
-    "            predictions.append([])\n",
-    "\n",
-    "    return predictions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "019a92ab-6413-4006-8936-f10cbbd1c1be",
    "metadata": {},
    "source": [
@@ -282,19 +364,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d133c040-e787-421d-bb4d-ee2d232fc0c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting the folder:  uptrain_smart_data\n",
-      "Deleting the folder:  uptrain_logs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = {\n",
     "    \"checks\": [\n",
@@ -303,8 +376,6 @@
     "        {\n",
     "            'type': uptrain.Monitor.CONCEPT_DRIFT,\n",
     "            'algorithm': uptrain.DataDriftAlgo.DDM,\n",
-    "            'warn_thres': 2,\n",
-    "            'alarm_thres': 3,\n",
     "            \"measurable_args\": {\n",
     "                'type': uptrain.MeasurableType.REC_HIT_RATE,\n",
     "                },\n",
@@ -334,9 +405,7 @@
     "    ], \n",
     "    \"retraining_folder\": 'uptrain_smart_data', \n",
     "    \"logging_args\": {\"st_logging\": True},\n",
-    "}\n",
-    "\n",
-    "framework = uptrain.Framework(cfg)"
+    "}"
    ]
   },
   {
@@ -344,12 +413,12 @@
    "id": "a1021596-5678-4599-b648-bfa0df4f765c",
    "metadata": {},
    "source": [
-    "### Step 6: Ship your model in production with UpTrain"
+    "### Step 6: Monitor our model using custom monitors defined in UpTrain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "27f9dccc-2710-4253-a98b-4b390378cc85",
    "metadata": {},
    "outputs": [
@@ -357,16 +426,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8504\n",
-      "  Network URL: http://192.168.6.64:8504\n",
-      "\n"
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n"
      ]
     }
    ],
    "source": [
+    "framework = uptrain.Framework(cfg)\n",
+    "\n",
     "for i in range(int(len(x_test)/inference_batch_size)):\n",
     "    # Define input in the format understood by the UpTrain framework\n",
     "    inputs = {\"feats\": x_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
@@ -384,30 +451,6 @@
     "    \n",
     "    # Adding 1 sec pause to visualize the results live on the dashboard\n",
     "    time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "889c265c-b58a-428b-921a-38ab8cf144b6",
-   "metadata": {},
-   "source": [
-    "### Monitoring the hit-rate of the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95e372ee-3028-401c-9c0f-e6c3eaae2fff",
-   "metadata": {},
-   "source": [
-    "By applying a concept drift check on the model in prediction, UpTrain automatically monitors the performance of the model. In this case, the performance is defined as the hit rate, that is, the proportion of items that was boought by the user was actually recommended by the model. We observe an average hit-rate of around 0.1. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8cf472c-6a58-48e2-941a-769d55da6bc1",
-   "metadata": {},
-   "source": [
-    "<img width=\"600\" alt=\"hit_rate\" src=\"https://user-images.githubusercontent.com/5287871/217215003-e121b499-0e69-4e98-9cd6-2b931cc62056.png\">"
    ]
   },
   {
@@ -514,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
