--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -69,7 +69,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import uptrain\n",
     "import time\n",
@@ -465,13 +474,14 @@
      "text": [
       "- checks:\n",
       "\t- type:\n",
-      "\t\tAnomaly.CONCEPT_DRIFT\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
       "\t- algorithm:\n",
       "\t\tDataDriftAlgo.DDM\n",
       "- retraining_folder:\n",
       "\tuptrain_smart_data\n",
-      "- st_logging:\n",
-      "\tTrue\n"
+      "- logging_args:\n",
+      "\t- st_logging:\n",
+      "\t\tTrue\n"
      ]
     }
    ],
@@ -509,9 +519,14 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.64:8502\n",
+      "  Local URL: http://localhost:8503\n",
+      "  Network URL: http://192.168.6.92:8503\n",
       "\n",
+      "  For better performance, install the Watchdog module:\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \n",
       "Drift detected with DDM at time: 111298!!!\n"
      ]
     }
@@ -599,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
@@ -611,21 +626,22 @@
      "text": [
       "- checks:\n",
       "\t- type:\n",
-      "\t\tAnomaly.CUSTOM_MONITOR\n",
+      "\t\tMonitor.CUSTOM_MONITOR\n",
       "\t- initialize_func:\n",
-      "\t\t<function custom_initialize_func at 0x7f9e608f65f0>\n",
+      "\t\t<function custom_initialize_func at 0x28d969870>\n",
       "\t- check_func:\n",
-      "\t\t<function custom_check_func at 0x7f9e608f71c0>\n",
+      "\t\t<function custom_check_func at 0x28d969bd0>\n",
       "\t- need_gt:\n",
       "\t\tTrue\n",
       "\t- type:\n",
-      "\t\tAnomaly.CONCEPT_DRIFT\n",
+      "\t\tMonitor.CONCEPT_DRIFT\n",
       "\t- algorithm:\n",
       "\t\tDataDriftAlgo.DDM\n",
       "- retraining_folder:\n",
       "\tuptrain_smart_data\n",
-      "- st_logging:\n",
-      "\tTrue\n"
+      "- logging_args:\n",
+      "\t- st_logging:\n",
+      "\t\tTrue\n"
      ]
     }
    ],
@@ -704,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -794,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
