--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -75,7 +75,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -336,22 +345,22 @@
        "</div>"
       ],
       "text/plain": [
-       "            id  gt      Nose_X      Nose_Y  Left_Eye_X  Left_Eye_Y   \n",
-       "0  12002202098   1  536.832198  175.195562  275.183835  299.200492  \\\n",
+       "            id  gt      Nose_X      Nose_Y  Left_Eye_X  Left_Eye_Y  \\\n",
+       "0  12002202098   1  536.832198  175.195562  275.183835  299.200492   \n",
        "1  11004300163   1  127.299427  213.304615  120.006179  213.098156   \n",
        "2  18100208242   0  342.735809   75.173884  347.639763   69.066162   \n",
        "3  18100204340   0  335.262419  161.525842  340.358734  155.666068   \n",
        "4  12100104261   0  255.488160   62.442478  256.765451   58.603055   \n",
        "\n",
-       "   Right_Eye_X  Right_Eye_Y  Left_Ear_X  Left_Ear_Y  ...  Right_Hip_X   \n",
-       "0   321.438219    53.586762  438.831630  196.469141  ...   355.320493  \\\n",
+       "   Right_Eye_X  Right_Eye_Y  Left_Ear_X  Left_Ear_Y  ...  Right_Hip_X  \\\n",
+       "0   321.438219    53.586762  438.831630  196.469141  ...   355.320493   \n",
        "1   119.749502   220.877945  123.240242  213.496218  ...   282.739062   \n",
        "2   337.646757    69.463328  354.332650   70.183796  ...   327.693125   \n",
        "3   329.570863   154.843509  347.034712  154.827196  ...   316.727216   \n",
        "4   251.489867    58.323107  255.327531   55.634296  ...   235.763698   \n",
        "\n",
-       "   Right_Hip_Y  Left_Knee_X  Left_Knee_Y  Right_Knee_X  Right_Knee_Y   \n",
-       "0   352.771307   282.603256   245.372110    -71.727270    148.854694  \\\n",
+       "   Right_Hip_Y  Left_Knee_X  Left_Knee_Y  Right_Knee_X  Right_Knee_Y  \\\n",
+       "0   352.771307   282.603256   245.372110    -71.727270    148.854694   \n",
        "1   217.173672   331.887746   122.399542    369.934428    153.331971   \n",
        "2   175.678139   373.687116   236.403840    330.044019    238.719585   \n",
        "3   218.696415   375.741803   250.993843    285.306140    252.504808   \n",
@@ -548,9 +557,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x2a1f40790>, 'orig_training_file': 'data/training_data.json'} \n",
+      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x2a5d09f30>, 'orig_training_file': 'data/training_data.json'} \n",
       "\n",
-      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x2a1f405e0>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
+      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x2a5d09d80>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
      ]
     }
    ],
@@ -647,8 +656,8 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.92:8502\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.6.92:8501\n",
       "\n",
       "  For better performance, install the Watchdog module:\n",
       "\n",
@@ -769,7 +778,7 @@
     {
      "data": {
       "text/plain": [
-       "<uptrain.core.classes.signals.signal.OrSignal at 0x2a1f4e950>"
+       "<uptrain.core.classes.signals.signal.OrSignal at 0x2977560e0>"
       ]
      },
      "execution_count": 11,
@@ -854,10 +863,10 @@
     }
    ],
    "source": [
-    "cfg[\"checks\"] = [{\n",
+    "cfg[\"checks\"].append({\n",
     "        'type': uptrain.Monitor.EDGE_CASE, \n",
     "        \"signal_formulae\": edge_case_signal\n",
-    "    }]\n",
+    "    })\n",
     "\n",
     "framework = uptrain.Framework(cfg)\n",
     "\n",
