--- a/examples/shopping_cart_recommendation/run.ipynb
+++ b/examples/shopping_cart_recommendation/run.ipynb
@@ -59,7 +59,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.spatial.distance import cosine\n",
     "import numpy as np\n",
@@ -215,8 +224,8 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.92:8502\n",
+      "  Local URL: http://localhost:8504\n",
+      "  Network URL: http://192.168.6.92:8504\n",
       "\n",
       "  For better performance, install the Watchdog module:\n",
       "\n",
@@ -450,7 +459,7 @@
     "    framework.log(identifiers=ids, gts=gts)\n",
     "    \n",
     "    # Adding 1 sec pause to visualize the results live on the dashboard\n",
-    "    time.sleep(1)"
+    "    time.sleep(0.01)"
    ]
   },
   {
