Updating setup.py and changing ride time video to gif

--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -385,6 +385,7 @@
     "    \"model\": model,\n",
     "    # Limit the number of points for which SHAP values are calculated to reduce runtime.\n",
     "    \"shap_num_points\": 10000,\n",
+    "    # Tell the framework the column name that corresponds to data-point id\n",
     "    \"id_col\": \"id\"\n",
     "}"
    ]
@@ -531,9 +532,9 @@
    "id": "2a93f717-7a02-4cc3-87f8-914de9831349",
    "metadata": {},
    "source": [
-    "As we can notice from the dashboard, we get two plots for SHAP explanability. The plot on the left is the average weight of each feature. As expected, the feature \"dist\" (that represents the distance of the trip) has the biggest impact on the trip duration prediction. Moreover, pickup hour and taxi vendor id also somewhat affect the trip duration. \n",
+    "As we can notice from the dashboard, we get two plots for SHAP explainability. The plot on the left is the average weight of each feature. As expected, the feature \"dist\" (that represents the distance of the trip) has the biggest impact on the trip duration prediction. Moreover, pickup hour and taxi vendor id also somewhat affect the trip duration. \n",
     "\n",
-    "On the right, we can see how the model arrive at the prediction for any data-point (in this case ID `id1787379`). Due to the low distance of the trip, the feature \"dist\" contributed `-256.06` to the overall trip duration. "
+    "On the right, we can see how the model arrives at the prediction for any data-point (in this case ID `id1787379`). Due to the low distance of the trip, the feature \"dist\" contributed `-256.06` to the overall trip duration. "
    ]
   },
   {
@@ -550,36 +551,9 @@
    "metadata": {},
    "source": [
     "### Demo Video: SHAP explainability\n",
-    "We have added a small video on how it looks below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f4a1edcd-673a-4525-8e76-668bbba9edfe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/4_Explanability+recording.mov\" controls  width=\"600\" >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import Video\n",
-    "video = Video(\"https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/4_Explanability+recording.mov\")\n",
-    "video.width = 600\n",
-    "video"
+    "We have added a small video on how it looks below.\n",
+    "\n",
+    "![gif](https://uptrain-demo.s3.us-west-1.amazonaws.com/ride_estimation/4_Explanability_recording.gif)"
    ]
   },
   {
